--- a/thumbnail-gallery-captions/styles.css
+++ b/thumbnail-gallery-captions/styles.css
@@ -7,27 +7,26 @@ body {
 
 a {
 	color: crimson;
-	text-deocration: none;
+	text-decoration: none;
 }
 
 a:hover {
-	color: red;
+	color:red;
 }
 
-/* Layout
+/* Page structure
 ------------------------------------------*/
 
 header,
 .container,
 footer {
 	margin: 0 auto;
-	width: 88%;
-	max-width: 1080px;
+	width:88%;
+	max-width: 1080px;		
 }
 
 .wrapper {
-	width: 100%;
-	padding: 1em 0;
+	padding:1em 0;
 	background: #ffffff;
 }
 
@@ -44,24 +43,27 @@ footer {
 	margin-right: 1em;
 }
 
-.gallery img {
-	border: 6px solid #eee;
-}
-
-.gallery img:hover {
-	border: 6px solid pink;
-}
-
 .gallery li .item {
 	position:relative;
+	overflow:hidden;
 }
 
 .gallery li .item span {
 	position:absolute;
-	bottom:0;
+	bottom:-70px;
 	left:0;
 	text-align:center;
 	width:100%;
 	background:rgba(250,250,250,0.8);
-	padding:.7em 0 1.2em 0;
+	padding:.7em 0 1.1em 0;
+	font-size:1.5em;
+	transition: 1s all ease-in-out;
+}
+
+.gallery li .item:hover span {
+	bottom:0;
+}
+
+.gallery a, .gallery img {
+	display:block;
 }
