--- a/typography/styles.css
+++ b/typography/styles.css
@@ -135,3 +135,22 @@ hr {
   display: inline-block;
   background: url(images/bullet.png);
 }
+
+
+/* Button
+------------------------------------------*/
+
+button {
+  font-size:1em;
+  border:none;
+  background: linear-gradient(#ffffff, #eeeeee);
+  outline:0;
+  padding:.5em 1em;
+  border-radius:15px;
+  text-shadow: 1px 1px 3px rgba(198,198,198,0.9);
+  border:2px solid #eeeeee;
+}
+
+button:hover {
+  background: linear-gradient(#eeeeee, #ffffff);
+}
