added flex box examples and updated images

--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -1,17 +1,17 @@
 body {
-  background: #eeeeee;
-  font-size: 16px;
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
-  margin: 0;
+    background: #eeeeee;
+    font-size: 16px;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    margin: 0;
 }
 
 a {
-  color: crimson;
-  text-decoration: none;
+    color: crimson;
+    text-decoration: none;
 }
 
 a:hover {
-  color: red;
+    color: red;
 }
 
 
@@ -21,22 +21,23 @@ a:hover {
 header,
 .container,
 footer {
-  margin: 0 auto;
-  width: 88%;
-  max-width: 1080px;
+    margin: 0 auto;
+    width: 88%;
+    max-width: 1080px;
 }
 
 .wrapper {
-  padding: 1em 0;
-  background: #ffffff;
+    padding: 1em 0;
+    background: #ffffff;
 }
 
 img {
-  max-width: 100%;
+    max-width: 100%;
+    height: auto;
 }
 
 
-/* FlexBox  Gallery
+/* Flex Box Gallery
 ------------------------------------------*/
 
 .gallery,
@@ -49,10 +50,9 @@ img {
 .gallery-8,
 .gallery-9,
 .gallery-10,
-.gallery-11,
-.gallery-12 {
-  background: pink;
-  display: flex;
+.gallery-11 {
+    background: pink;
+    display: flex;
 }
 
 .gallery img,
@@ -65,59 +65,56 @@ img {
 .gallery-8 img,
 .gallery-9 img,
 .gallery-10 img,
-.gallery-11 img,
-.gallery-12 img {
-  display: block;
+.gallery-11 img {
+    display: block;
 }
 
 .gallery {
-  justify-content: flex-end;
-  flex-wrap: wrap;
+    justify-content: flex-end;
+    flex-wrap: wrap;
 }
 
 .gallery-2 {
-  justify-content: center;
-  flex-wrap: wrap;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .gallery-3 {
-  justify-content: space-between;
-  flex-wrap: wrap;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .gallery-4 {
-  justify-content: space-around;
-  flex-wrap: wrap;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .gallery-5 .foo {
-  order:1;
+    order: 1;
+    /* Use -1 to bring forward */
 }
 
 .gallery-6 {
-  flex-direction:reverse;
+    flex-direction: row-reverse;
 }
 
 .gallery-7 {
-  flex-direction:column;
+    flex-direction: column;
 }
 
-.gallery-8 .baz {
-  flex-grow:2;
+.gallery-8 {
+    flex-direction: column;
+    align-items: center;
 }
 
-.gallery-9 .bar {
-  /*flex-shrink:2;*/
+.gallery-9 {
+    align-items: flex-end;
 }
 
 .gallery-10 {
-  align-items:flex-end;
+    align-items: center;
 }
 
-.gallery-11{
-  flex-direction:center;
-}
-
-.gallery-12{
-  flex-direction:baseline;
+.gallery-9 {
+    align-items: baseline;
 }
