--- a/positioning/styles.css
+++ b/positioning/styles.css
@@ -38,8 +38,7 @@ footer {
 .first {
   width: 300px;
   height: 300px;
-  background: rgba(255, 0, 0, 0.4);
-  /* red */
+  background: rgba(255, 0, 0, 0.4); /* red */
   position: fixed;
   top: 0;
   left: 6%;
@@ -48,8 +47,7 @@ footer {
 .second {
   width: 300px;
   height: 300px;
-  background: rgba(255, 255, 0, 0.4);
-  /* yellow */
+  background: rgba(255, 255, 0, 0.4); /* yellow */
   position: relative;
   left: 150px;
   top: 54px;
@@ -58,8 +56,7 @@ footer {
 .third {
   width: 300px;
   height: 300px;
-  background: rgba(0, 255, 255, 0.4);
-  /* blue */
+  background: rgba(0, 255, 255, 0.4); /* blue */
   position: absolute;
   top: 150px;
   left: 150px;
