--- a/media-queries/styles.css
+++ b/media-queries/styles.css
@@ -35,7 +35,7 @@ footer {
 /* Media Queries
 ------------------------------------------*/
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 48em) {
   .container {
     display: flex;
     justify-content: space-between;
