--- a/typography/styles.css
+++ b/typography/styles.css
@@ -5,7 +5,6 @@ body {
     margin: 0;
     line-height: 1.5;
     /* 1.5 * 16 = 24 (24px baseline) */
-    margin: 1.5em 0;
 }
 
 a {
@@ -37,6 +36,9 @@ footer {
 
 /* Typography
 ------------------------------------------*/
+p {
+        margin: 1.5em 0;
+}
 
 h1 {
     font-size: 1.5em;
