--- a/thumbnail-gallery-zoom/styles.css
+++ b/thumbnail-gallery-zoom/styles.css
@@ -46,20 +46,21 @@ footer {
 }
 
 .gallery li div {
+  position:relative;
   overflow: hidden;
-  width: 270px;
-  height: 270px;
-  margin: 0 auto;
+  width: 300px;
+  height: 300px;
+
 }
 
 .gallery img {
-  transform: scale(.9);
+  
   transition: all 1s ease-in-out;
-  transform-origin: 0 0;
+  /*transform-origin: 0 0;*/
 }
 
 .gallery li:hover img {
-  transform: scale(1);
+  transform: scale(1.1);
 }
 
 .gallery a,
