--- a/backgrounds/styles.css
+++ b/backgrounds/styles.css
@@ -45,7 +45,7 @@ nav ul li a {
 	padding: .5em 1em;
 	background:#cccccc;
 	border-radius: 15px;
-	transition: all 1s ease-in-out;
+	transition: 1s;
 }
 
 nav ul li a:hover {
