--- a/filters/styles.css
+++ b/filters/styles.css
@@ -36,35 +36,28 @@ footer {
 ------------------------------------------*/
 
 .grayscale {
-  -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
-  transition: all 1s ease-in-out;
+  transition: 1s;
 }
 
 .grayscale:hover {
-  -webkit-filter: grayscale(0);
   filter: grayscale(0);
-  filter: none;
 }
 
 .blur {
-  -webkit-filter: blur(3px);
   filter: blur(3px);
-  transition: all 1s ease-in-out;
+  transition: 1s;
 }
 
 .blur:hover {
-  -webkit-filter: blur(0px);
   filter: blur(0px);
 }
 
 .sepia {
-  -webkit-filter: sepia(100%);
   filter: sepia(100%);
-  transition: all 1s ease-in-out;
+  transition: 1s;
 }
 
 .sepia:hover {
-  -webkit-filter: sepia(0);
   filter: sepia(0);
 }
