--- a/social-media-icons-sprite/styles.css
+++ b/social-media-icons-sprite/styles.css
@@ -1,18 +1,19 @@
 body {
-	background: #eeeeee;
-	font-size: 16px;
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	margin:0;
+    background: #eeeeee;
+    font-size: 16px;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    margin: 0;
 }
 
 a {
-	color: crimson;
-	text-decoration: none;
+    color: crimson;
+    text-decoration: none;
 }
 
 a:hover {
-	color: red;
+    color: red;
 }
+
 
 /* Layout
 ------------------------------------------*/
@@ -20,77 +21,86 @@ a:hover {
 header,
 .container,
 footer {
-	margin: 0 auto;
-	width: 88%;
-	max-width: 1080px;		
+    margin: 0 auto;
+    width: 88%;
+    max-width: 1080px;
 }
 
 .wrapper {
-	width: 100%;
-	padding: 1em 0;
-	background: #ffffff;
+    width: 100%;
+    padding: 1em 0;
+    background: #ffffff;
 }
 
-/* Social media sprite
+
+/* social media.
 ------------------------------------------*/
 
 .social-channels {
-list-style: none;
-padding: 0;
+    list-style: none;
+    padding: 0;
+    display: flex;
 }
 
 .social-channels li {
-display: inline-block;
-margin-right: .5em;
+    margin-right: .5em;
 }
 
-.social-channels a {
-display: block;
-width: 32px;
-height: 32px;
-text-indent: 110%;
-white-space: nowrap;
-overflow: hidden;
-border-radius: 3px;
-transition: all .2s ease-in-out;
+.social-channels li a {
+    display: block;
+    width: 32px;
+    height: 32px;
+    border-radius: 3px;
+    transition: .2s;
+    /* Hide text */
+    text-indent: 110%;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
-.social-channels a:hover {
-opacity:.7;
+.social-channels li a:hover {
+    opacity: .7;
 }
 
-.facebook, 
-.twitter, 
-.youtube, 
-.linkedin, 
-.github, 
-.flickr, 
-.googleplus, 
+.facebook,
+.twitter,
+.youtube,
+.linkedin,
+.github,
+.flickr,
+.googleplus,
 .pinterest {
-	background: url(images/sprite.svg);
+    background: url(images/sprite.svg);
 }
 
 .facebook {
-	background-position:0 0;
+    background-position: 0 0;
 }
+
 .twitter {
-	background-position: 0 32px;
+    background-position: 0 -64px;
 }
+
 .youtube {
-	background-position: 64px 32px;
-} 
-.github{
-	background-position: 0 64px;
+    background-position: -32px -64px;
 }
+
+.github {
+    background-position: 0 -32px;
+}
+
 .linkedin {
-	background-position: 32px 0;
-} 
-.flickr{
-	background-position:64px 0;
+    background-position: -64px 0;
 }
+
+.flickr {
+    background-position: -32px 0;
+}
+
 .googleplus {
-	background-position:64px 64px;
-} 
+    background-position: -32px -32px;
+}
+
 .pinterest {
-	background-position:32px 64px;
+    background-position: -64px -32px;
 }
