added mit license

--- a/layout/index.html
+++ b/layout/index.html
@@ -16,17 +16,15 @@
   <div class="wrapper">
     <div class="container">
       <h2>Heading</h2>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quibusdam ea atque cumque neque distinctio officia, similique saepe consequuntur, dignissimos officiis aspernatur totam non itaque! Natus voluptatem quasi nostrum doloribus.
       </p>
-      <h2>Heading</h2>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper. Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
-      <p>Quisque ultrices gravida pede. Mauris accumsan vulputate tellus. Phasellus condimentum bibendum dolor. Mauris sed ipsum. Phasellus in diam. Nam sapien ligula, consectetuer id, hendrerit in, cursus sed, leo. Nam tincidunt rhoncus urna. Aliquam id massa ut nibh bibendum imperdiet. Curabitur neque mauris, porta vel, lacinia quis, placerat ultrices, orci.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, commodi voluptatibus eligendi. Quam velit repellat minus, sit necessitatibus ad laborum aperiam eaque exercitationem quae vel architecto ex laboriosam nihil modi.</p>
     </div>
     <!-- .container-->
   </div>
   <!-- .wrapper-->
   <footer>
-    <small>Powered by NGINX</small>
+    <small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
   </footer>
 </body>
 
