--- a/backgrounds/styles.css
+++ b/backgrounds/styles.css
@@ -1,17 +1,42 @@
 body {
-	font-size: 16px;
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	margin:0;
+  font-size: 16px;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  margin: 0;
 }
 
 a {
-	color: crimson;
-	text-decoration:none;
+  color: crimson;
+  text-decoration: none;
 }
 
 a:hover {
-	color: red;
+  color: red;
 }
+
+/* Backgrounds
+------------------------------------------*/
+
+#home {
+  background: url(images/pattern.png) repeat-y;
+}
+
+#junk {
+  background: url(images/pattern.png) repeat-x;
+}
+
+#junk h1 {
+  color:red;
+}
+
+#things {
+  background: url(images/paint.png) no-repeat 100% 0px;
+}
+
+#stuff {
+  background: url(images/cosmic-thing.jpg) fixed;
+  background-size: cover;
+}
+
 
 /* Layout
 ------------------------------------------*/
@@ -19,59 +44,41 @@ a:hover {
 header,
 .container,
 footer {
-	margin: 0 auto;
-	width:88%;
-	max-width: 1080px;
+  margin: 0 auto;
+  width: 88%;
+  max-width: 1080px;
 }
 
 .wrapper {
-	padding:1em 0;
+  background: #ffffff;
+  padding: 1em 0;
 }
+
+#stuff .wrapper {
+  background:rgba(255,255,255,.6);
+}
+
 
 /* Navigation
 ------------------------------------------*/
 
 nav ul {
-	padding:0;
-	list-style:none;
-	display: flex;
+  padding: 0;
+  list-style: none;
+  display: flex;
 }
 
 nav ul li {
-	margin-right: .5em;	
+  margin-right: .5em;
 }
 
 nav ul li a {
-	padding: .5em 1em;
-	background:#cccccc;
-	border-radius: 15px;
-	transition: all 1s ease-in-out;
+  padding: .5em 1em;
+  background: #cccccc;
+  border-radius: 15px;
+  transition: all 1s ease-in-out;
 }
 
 nav ul li a:hover {
-	background: pink;
-}
-
-/* Backgrounds
-------------------------------------------*/
-
-#about {
-	background: url(images/wall-texture-web.jpg);
-}
-
-#stuff {
-	background: url(images/checkers.png) repeat-y;
-}
-
-#things {
-	background: url(images/stitch.png) repeat-x;
-}
-
-#home {
-	background: url(images/bullet-holes.png) no-repeat 700px 20px;
-}
-
-#junk {
-	background: url(images/texture.jpg) fixed;
-	background-size:cover;
+  background: pink;
 }
