changes flickr to instagram

--- a/social-media-icons/styles.css
+++ b/social-media-icons/styles.css
@@ -82,8 +82,8 @@ footer {
     background-image: url(images/github.svg);
 }
 
-.flickr {
-    background-image: url(images/flickr.svg);
+.instagram {
+    background-image: url(images/instagram.svg);
 }
 
 .googleplus {
