--- a/contact-form/styles.css
+++ b/contact-form/styles.css
@@ -31,36 +31,35 @@ footer {
   background: #ffffff;
 }
 
+
 /* Layout
 ------------------------------------------*/
 
-input[type="text"], 
-input[type="email"], 
+input[type="text"],
+input[type="email"],
 textarea {
   font-size: 1em;
   background: linear-gradient(#eeeeee, #ffffff);
   border-top: 2px solid #cccccc;
   border-left: 2px solid #cccccc;
   border-bottom: 2px solid #eeeeee;
-  border-bottom: 2px solid #eeeeee;
+  border-right: 2px solid #eeeeee;
   padding: .5em;
-  margin-top:.5em;
+  margin-top: .5em;
 }
 
 input[type="submit"] {
   font-size: 1em;
-  border: none;
   background: linear-gradient(#ffffff, #eeeeee);
   outline: 0;
   padding: .5em 1em;
   border-radius: 15px;
   text-shadow: 1px 1px 3px rgba(198, 198, 198, 0.9);
   border: 2px solid #eeeeee;
-  margin-top:1em;
+  margin-top: 1em;
 }
 
 input[type="submit"]:hover {
   background: linear-gradient(#eeeeee, #ffffff);
-  cursor:pointer;
+  cursor: pointer;
 }
-
