--- a/thumbnail-gallery-captions/styles.css
+++ b/thumbnail-gallery-captions/styles.css
@@ -1,17 +1,17 @@
 body {
-    background: #eeeeee;
-    font-size: 16px;
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
-    margin: 0;
+  background: #eeeeee;
+  font-size: 16px;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  margin: 0;
 }
 
 a {
-    color: crimson;
-    text-decoration: none;
+  color: crimson;
+  text-decoration: none;
 }
 
 a:hover {
-    color: red;
+  color: red;
 }
 
 
@@ -21,14 +21,14 @@ a:hover {
 header,
 .container,
 footer {
-    margin: 0 auto;
-    width: 88%;
-    max-width: 1080px;
+  margin: 0 auto;
+  width: 88%;
+  max-width: 1080px;
 }
 
 .wrapper {
-    padding: 1em 0;
-    background: #ffffff;
+  padding: 1em 0;
+  background: #ffffff;
 }
 
 
@@ -36,37 +36,38 @@ footer {
 ------------------------------------------*/
 
 .gallery {
-    padding: 0;
-    list-style: none;
-    display: flex;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .gallery li {
-    margin-right: 1em;
+  margin: 1em 1em 0 0;
 }
 
-.gallery li .item {
-    position: relative;
-    overflow: hidden;
+.gallery li  {
+  position: relative;
+  overflow: hidden;
 }
 
-.gallery li .item span {
-    position: absolute;
-    bottom: -71px;
-    left: 0;
-    text-align: center;
-    width: 100%;
-    background: rgba(250, 250, 250, 0.8);
-    padding: .7em 0 1.1em 0;
-    font-size: 1.5em;
-    transition: 1s;
+.gallery li span {
+  position: absolute;
+  bottom: -71px;
+  left: 0;
+  text-align: center;
+  width: 100%;
+  background: rgba(250, 250, 250, 0.8);
+  padding: .7em 0 1.1em 0;
+  font-size: 1.5em;
+  transition: 1s;
 }
 
-.gallery li .item:hover span {
-    bottom: 0;
+.gallery li:hover span {
+  bottom: 0;
 }
 
 .gallery a,
 .gallery img {
-    display: block;
+  display: block;
 }
