--- a/thumbnail-gallery-zoom/styles.css
+++ b/thumbnail-gallery-zoom/styles.css
@@ -36,13 +36,11 @@ footer {
 ------------------------------------------*/
 
 .gallery {
-  list-style: none;
-  padding: 0;
   display: flex;
   flex-wrap:wrap;
 }
 
-.gallery li {
+.gallery a {
   margin: .5em .5em 0 0;
 }
 
@@ -50,11 +48,11 @@ footer {
   transition: 1s;
 }
 
-.gallery li:hover img {
+.gallery a:hover img {
   transform: scale(1.1);
 }
 
-.gallery li div {
+.gallery a {
   overflow:hidden;
 }
 
