--- a/navigation/styles.css
+++ b/navigation/styles.css
@@ -36,22 +36,19 @@ footer {
 ------------------------------------------*/
 
 nav ul {
-  padding: 0;
-  list-style: none;
+  list-style:none;
+  padding:0;
   display: flex;
 }
 
-nav ul li {
-  margin-right: .5em;
-}
-
-nav ul li a {
+nav a {
+  margin: 0 .5em 1em 0;
   padding: .5em 1em;
   background: #cccccc;
   border-radius: 15px;
   transition: 1s;
 }
 
-nav ul li a:hover {
+nav a:hover {
   background: pink;
 }
