--- a/responsive-images/styles.css
+++ b/responsive-images/styles.css
@@ -39,3 +39,18 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+/* Media Query
+------------------------------------------*/
+
+@media screen and (min-width:48em) {
+  /* 48 * 16 = 768px */
+  .container {
+    display:flex;
+    justify-content:space-between;
+  }
+
+  .half {
+    width:48%;
+  }
+}
