more specific selecting

--- a/anchored-links/styles.css
+++ b/anchored-links/styles.css
@@ -50,11 +50,11 @@ nav ul {
   display: flex;
 }
 
-nav li {
+nav ul li {
   margin-right: .5em;
 }
 
-nav a {
+nav ul li a {
   padding: .5em 1em;
   background: #cccccc;
   border-radius: 15px;
